--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=PC_ExamenFebrero
+# Logging
+logging.level.root=INFO
+logging.level.com.progcon.pc_examenfebrero=DEBUG
+
+# Configuración del número de hilos (opcional si usas un ThreadPool personalizado)
+executor.threadpool.size=10
+
+# Puerto de servidor (si es necesario ejecutar la aplicación con un servidor)
+server.port=8080
+
+# Configuración de tiempo de espera para hilos (opcional)
+executor.threadpool.keepAlive=60
+
+# Otras configuraciones personalizadas
+app.dados.condiciones.max=3  # Máxima alteración en las condiciones especiales
+app.dados.numero=6           # Número de dados por defecto
